camel case to snake case
